# AI-Orchestrator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/: config.py  main.py
src/application/: __init__.py  project_coordinator.py
src/application/agents/: __init__.py  agent_analyzer.py  agent_development.py  chunk_system.py  prompts_analyzer.py  prompts_backend.py  prompts_frontend.py
src/application/analysis/: __init__.py  analysis_service.py  tech_detector.py
src/application/factories/: cli_context_factory.py
src/application/services/: agent_health_service.py  agent_manager.py
src/application/tasks/: __init__.py  task_categorizer.py  task_manager.py  task_prioritizer.py
src/cli/: __init__.py  cli_enrich.py  cli_runner.py  entrypoint.py
src/domain/models/: __init__.py  agent_model.py  analysis_models.py  git_models.py  project_details_model.py  task_model.py
src/frontend/: __init__.py  app.py  run.py
src/infrastructure/execution_tests/: __init__.py  test_implementation.py  test_manager.py  test_results_analyzer.py  test_service.py  test_suite_runner.py
src/infrastructure/git/: __init__.py  common_exclusions.py  file_exclusion.py  git_service.py  github_service.py  gitlab_service.py
src/infrastructure/mocks/: __init__.py  mock_openai.py  mock_responses.py  mock_service.py
src/infrastructure/notification/: email_service.py
src/infrastructure/openai/: __init__.py  openai_service.py
src/project_tests/: __init__.py  conftest.py
src/utils/: __init__.py  exceptions_control.py  logging.py
(+14 files in other folders)
